--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
 
     <title>Hello Blog</title>
   </head>
-  <body>
+  <body id="mode" class="light">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
